[gd_scene load_steps=2 format=3 uid="uid://bilrec7i5mddr"]

[ext_resource type="Script" uid="uid://nqogyxpaj336" path="res://scene/keypad.gd" id="1_siitb"]

[node name="keypad" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_siitb")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Button_0" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button_1" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button_2" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button_3" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button_4" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button_5" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button_6" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button_7" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button_8" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button_9" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button_try" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="Button_0" to="." method="_on_button_0_pressed"]
[connection signal="pressed" from="Button_1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button_2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button_3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button_4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button_5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button_6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button_7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button_8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Button_9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="Button_try" to="." method="_on_button_try_pressed"]
